--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,11 @@ body {
     color: white;
 }
 
+.App-header .userCountBadge {
+  padding: 3px;
+  float: left;
+}
+
 .menu-panel {
   float: right;
   margin-top: 3px;
@@ -38,6 +43,10 @@ body {
   width: 100%;
 }
 
+.footer .clock {
+  float: left;
+}
+
 .center-panel {
   margin: 20px;
 }
@@ -56,9 +65,17 @@ body {
   text-align: center;
 }
 
+.github-user-container img {
+  width: 50px;
+  height: 50px;
+}
+
+.github-user-container {
+  float: left;
+  padding: 10px;
+}
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
-
